--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 .bg-red{
-    background-color:purple;
+    background-color:red;
+display: inline-grid;
+grid-template-columns: repeat(5,1fr);
+grid-template-rows: repeat(1.25,1fr);
+margin: 1px 1px 1px 1px;
+border: 0.01px solid black;
+}
+
+.bg-blue {
+    background-color: rgb(198, 255, 166);
 }
