--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 .bg-red{
-    background-color:red;
+    background-color:rgb(65, 137, 165);
 display: inline-grid;
 grid-template-columns: repeat(5,1fr);
 grid-template-rows: repeat(1.25,1fr);
 margin: 1px 1px 1px 1px;
-border: 0.01px solid black;
+border: 0.01px solid rgba(0, 0, 0, 0.151);
 }
 
 .bg-blue {
-    background-color: rgb(198, 255, 166);
+    background-color: rgb(161, 184, 159);
+}
+#grid-contanier{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10%;
 }
