--- a/style.css
+++ b/style.css
@@ -16,3 +16,7 @@ border: 0.01px solid rgba(0, 0, 0, 0.151);
     align-items: center;
     margin-top: 10%;
 }
+button{
+    display: flex;
+align-items: center;
+} 
